testdata/asm/invalid/div_04.zkasm
;;error:4:3-18:remainder bit overflow (u16 into u15)
fn div(x u16, y u16) -> (q u16, r u15) {
  var w u16
  q, r, w = x / y
  return
}
